<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Name-->
    <string name="app_name">KwaRamani</string>
    <!-- Buttons UI-->
    <string name="btn_findme">Find Me</string>
    <string name="btn_rental">House Rental</string>
    <string name="btn_buyhouse">Home Buyer</string>
    <string name="btn_motel">Motel</string>
    <string name="btn_about">About</string>
    <string name="btn_exit">Exit</string>
    <string name="list">View List</string>
    <string name="home">Home</string>
    <string name="goLabel">Go</string>
    <string name="settings">Settings</string>
    <string name="quit">Exit</string>
    <!-- Title Bar Names -->
    <string name="ramani">KwaRamani</string>
    <string name="findme">Find Me</string>
    <string name="rental">Rental Houses</string>
    <string name="buyhouse">Search for House</string>
    <string name="motel">Motels</string>
    <string name="about">About</string>
     <string name="listresults">Results List</string>
    <string name="houses">Available Houses</string>
    <string name="addmotel">Add Motel</string>
    <string name="motellist">Motel List</string>
    <string name="rentallist">Rental List</string>
    
    <!-- maps key-->
    <string name="google_maps_api_key">0A8EMCJX_pL6iiLp0j3YDDHe0TVhtyZF3ZX651g</string>
     <!-- Description UI-->
     <string name="description_logo">KwaRamani</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_add">Add</string>
    <!-- Title UI-->
    <string name="title_logo">KwaRamani</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <!-- contacts buttons -->
    <string name="team">Developer</string>
	<string name="twitter">Twitter</string>
	<string name="contact">Contact</string>
	<string name="facebook">Facebook</string>
	<!-- Empty Fields -->
	<string name="empty_name">Enter your full Name.</string>
	<string name="empty_comment">Enter a Comment.</string>
	<!-- Spinner  UI Titles -->
	<string name="spn_location_prompt">Select a Search Location</string>
    <string name="spn1_price_prompt">Select a price Limit</string>
    <string name="spn2_type_prompt">Select a house Type</string>
    <string name="spn3_rooms_prompt">Number of BedRooms</string>
    <string name="spn4_baths_prompt">Number of BathRooms</string>
    <!-- Preferences -->
    <string name="compass_summary">Check to display map orientation compass</string>
    <string name="gpsPrefs_title">GPS Preferences</string>
    <string name="gpsPrefs_summary">Location precision (higher precision may drain Battery quicker or utilize more Airtime)</string>
    <string name="compass_title">Compass</string>
    <!-- Labels -->
    <string name="locLabel">Location:</string>
    <string name="latLabel">Lat</string>
    <string name="longLabel">Lon</string>
    <string name="trackLabel">Track Present Location</string>
    <string name="satLabel">Sat</string>
    <string name="mapLabel">Map</string>
    <string name="RamaniComment">Comment</string>
    <string name="RamaniPrefs">Preferences</string>
    
    <!-- Location -->
    <string name="hint_location">Location here</string>
    <string name="location_not_found">A location can not currently be determined. Enable
		more location sources i.e. GPS Satellites in Security and Location
		Settings.</string>
		<string name="enable_gps_network">Enable GPS </string>
      <string name="enable_message">Please confirm GPS  settings to resolve current location</string>
      <string name="settings_btn">Settings</string>
      <string name="cancel">Cancel</string>
		<!-- Add Motel -->
		<string name="empty_motel_name">Motel Name not set</string>
		<string name="empty_motel_price">Motel Price not set</string>
		<string name="empty_motel_location">Location not set</string>
		
		<!-- Empty search fields -->
		<string name="empty_place">Select a location</string>
		<string name="empty_price">Set a price limit</string>
		<string name="empty_type">select property type</string>
		<string name="empty_rooms">Select number of rooms</string>
		
		<!-- AddMotel Image -->
		<string name="choose_method">Upload Photo</string>
		<string name="btn_cancel">Cancel</string>
		<string name="camera_option">Camera</string>
		<string name="gallery_option">Gallery</string>
		
		
    
    

</resources>